fixing spacing on favorites cards

--- a/src/css/Favorites.module.css
+++ b/src/css/Favorites.module.css
@@ -48,7 +48,7 @@
 .favItem .description {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 10px;
     justify-content: center;
     align-items: center;
 }
